--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -3,9 +3,21 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": [
+				"./src/*"
+			]
 		},
-		"lib": ["ESNext", "DOM", "DOM.Iterable"]
+		"lib": [
+			"ESNext",
+			"DOM",
+			"DOM.Iterable"
+		],
+		"typeRoots": [
+			"node_modules/@types",
+			"./typings",
+		]
 	},
-	"include": ["./src"]
+	"include": [
+		"./src",
+	]
 }
