fix: type errors

--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -3,21 +3,10 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~/*": [
-				"./src/*"
-			]
+			"~/*": ["./src/*"]
 		},
-		"lib": [
-			"ESNext",
-			"DOM",
-			"DOM.Iterable"
-		],
-		"typeRoots": [
-			"node_modules/@types",
-			"./typings",
-		]
+		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"typeRoots": ["node_modules/@types", "./typings"]
 	},
-	"include": [
-		"./src",
-	]
+	"include": ["./src"]
 }
