--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -3,17 +3,10 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~/*": [
-				"./src/*"
-			]
+			"~/*": ["./src/*"]
 		},
-		"typeRoots": [
-			"../../typings"
-		],
+		"typeRoots": ["../../typings"],
 		"incremental": true
 	},
-	"include": [
-		"src",
-		"../../typings/**/*.d.ts"
-	]
+	"include": ["src", "../../typings/**/*.d.ts"]
 }
