--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -3,10 +3,24 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
+			"~r/*": [
+				"./src/*"
+			],
+			"~p/*": [
+				"../preload/src/*"
+			]
 		},
-		"lib": ["ESNext", "DOM", "DOM.Iterable"],
-		"typeRoots": ["node_modules/@types", "./typings"]
+		"lib": [
+			"ESNext",
+			"DOM",
+			"DOM.Iterable"
+		],
+		"typeRoots": [
+			"node_modules/@types",
+			"./typings"
+		]
 	},
-	"include": ["./src"]
+	"include": [
+		"./src"
+	]
 }
