--- a/packages/renderer/tsconfig.eslint.json
+++ b/packages/renderer/tsconfig.eslint.json
@@ -1,4 +1,11 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["vite.config.ts", ".eslintrc.cjs", "src"]
+	"include": [
+		"src",
+		"typings",
+		".eslintrc.cjs",
+		"postcss.config.cjs",
+		"tailwind.config.cjs",
+		"vite.config.ts",
+	]
 }
