--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -3,27 +3,12 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~r/*": [
-				"./src/*"
-			],
-			"~p/*": [
-				"../preload/src/*"
-			]
+			"~r/*": ["./src/*"],
+			"~p/*": ["../preload/src/*"]
 		},
-		"lib": [
-			"ESNext",
-			"DOM",
-			"DOM.Iterable"
-		],
-		"typeRoots": [
-			"node_modules/@types",
-			"./typings"
-		],
-		"types": [
-			"node"
-		]
+		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"typeRoots": ["node_modules/@types", "./typings"],
+		"types": ["node"]
 	},
-	"include": [
-		"./src"
-	]
+	"include": ["./src"]
 }
