--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
 	"dependencies": {
 		"@bitwarden/cli": "^1.20.0",
 		"autoprefixer": "^10.4.2",
+		"daisyui": "^1.25.4",
 		"desm": "^1.2.0",
 		"electron-updater": "^4.6.1",
+		"execa": "^6.0.0",
 		"nanoid": "^3.2.0",
 		"nanoid-good": "^3.1.0",
 		"postcss": "^8.4.6",
+		"puppeteer-core": "^13.1.3",
+		"puppeteer-in-electron": "^3.0.5",
 		"round-to": "^6.0.0",
 		"tailwindcss": "^3.0.18",
 		"type-fest": "^2.11.1",
@@ -59,7 +63,6 @@
 		"electron-builder": "^22.14.5",
 		"electron-devtools-installer": "^3.2.0",
 		"eslint": "^8.5.0",
-		"execa": "^6.0.0",
 		"lint-staged": "^12.1.3",
 		"lion-git-hooks": "^1.0.2",
 		"liontypes": "^1.0.2",
