fix: lint errors

--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -1,9 +1,10 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"rootDir": "../..",
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
+			"~m/*": ["./src/*"]
 		},
 		"typeRoots": ["../../typings"]
 	},
