--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -4,24 +4,12 @@
 		"rootDir": "../..",
 		"baseUrl": ".",
 		"paths": {
-			"~p/*": [
-				"./src/*"
-			],
-			"~r/*": [
-				"../renderer/src/*"
-			],
-			"~m/*": [
-				"../main/src/*"
-			]
+			"~p/*": ["./src/*"],
+			"~r/*": ["../renderer/src/*"],
+			"~m/*": ["../main/src/*"]
 		},
-		"types": [
-			"node"
-		]
+		"types": ["node"]
 	},
-	"files": [
-		"src/index.ts"
-	],
-	"include": [
-		"../../types/**/*.d.ts"
-	]
+	"files": ["src/index.ts"],
+	"include": ["../../types/**/*.d.ts"]
 }
